--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,7 @@ header {
 .menu-padding {
     padding-top: 33%;
     padding-left: 62px;
+    padding-right: 62px;
 }
 
 .ellipse {
@@ -437,6 +438,7 @@ header {
     font-weight: 400;
     font-size: 16px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .menu-btn {
@@ -455,4 +457,38 @@ header {
 }
 
 /* coment */
+
+.comment {
+    background-color: #E5E5E5;
+    padding-top: 104px;
+}
+
+.comment-text {
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.comment-icon {
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.posititel {
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 9px;
+}
+
+.comment-name {
+    text-align: center;
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 35px;
+}
 
