--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,8 @@ header {
 .comment {
     background-color: #E5E5E5;
     padding-top: 104px;
+    height: 450px;
+    margin-bottom: 101px;
 }
 
 .comment-text {
@@ -489,6 +491,78 @@ header {
     text-align: center;
     font-weight: 400;
     font-size: 20px;
-    margin-bottom: 35px;
+    margin-bottom: 139px;
 }
 
+/* galeri */
+
+.galeri-title {
+     font-family: "Tinos", serif;
+     font-weight: 400;
+     font-size: 54px;
+     text-align: center;
+     margin-bottom: 60px;
+}
+
+.galeri-title span {
+    color: #c95e07;
+}
+
+.galeri-images {
+    position: relative;
+}
+
+.galeri-images::after {
+    position: absolute;
+    content: '';
+    width: 2.5%;
+    height: 16%;
+    background-color: red;
+    top: 0;
+    left: -166px;   
+}
+
+.galeri-images::before {
+    position: absolute;
+    content: '';
+    width: 3%;
+    height: 16%;
+    background-color: red;
+    top: 0;
+    left: 1380px;   
+}
+
+.galeri-image {
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.povars {
+     font-family: "Tinos", serif;
+     font-weight: 400;
+     font-size: 54px;
+     text-align: center;
+     padding-top: 100px;
+     margin-bottom: 107px;
+}
+
+.povars span {
+    color: #c95e07;
+}
+
+.povar-image {
+    margin-right: 30px;
+    margin-bottom: 100px;
+}
+
+.image-end {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.footer {
+    background-color: #000;
+    padding: 50px 0;
+    color: #FFFFFF;
+    text-align: center;
+}
